Reorganize repo; remove need for src/main/webapp besides WEB-INF. cache locally JS and CSS resources. Pull in dynamic resource allocation and reffing into the Wicket applicaiton.