@@ -141,6 +141,11 @@
             <artifactId>cas-metadata</artifactId>
             <version>0.10</version>
         </dependency>
+	    <dependency>
+	       <groupId>org.reflections</groupId>
+	       <artifactId>reflections</artifactId>
+	       <version>0.9.9-RC1</version>
+	    </dependency>           
     </dependencies>
 	<build>
 		<resources>
@@ -204,20 +209,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty9.version}</version>
-				<configuration>
-					<systemProperties>
-						<systemProperty>
-							<name>maven.project.build.directory.test-classes</name>
-							<value>${project.build.directory}/test-classes</value>
-						</systemProperty>
-					</systemProperties>
-					<jettyXml>${project.basedir}/src/test/jetty/jetty.xml,${project.basedir}/src/test/jetty/jetty-ssl.xml,${project.basedir}/src/test/jetty/jetty-http.xml,${project.basedir}/src/test/jetty/jetty-https.xml</jettyXml>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.9</version>
@@ -226,6 +217,28 @@
 					<wtpversion>${wtp.version}</wtpversion>
 				</configuration>
 			</plugin>
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <port>8181</port>
+                <systemProperties>
+                    <CATALINA_OPTS>-Djava.awt.headless=true -Dfile.encoding=UTF-8
+                                    -server -Xms1536m -Xmx1536m
+                                    -XX:NewSize=256m -XX:MaxNewSize=256m -XX:PermSize=256m
+                                    -XX:MaxPermSize=512m -XX:+DisableExplicitGC
+                                    -XX:+UseConcMarkSweepGC
+                                    -XX:+CMSIncrementalMode
+                                    -XX:+CMSIncrementalPacing
+                                    -XX:CMSIncrementalDutyCycleMin=0
+                                    -XX:-TraceClassUnloading
+                    </CATALINA_OPTS>
+                </systemProperties>
+                <contextFile>${basedir}/src/main/webapp/META-INF/context.xml</contextFile>
+                <path>/${project.build.finalName}</path>  
+            </configuration>        
+        </plugin>    
 		</plugins>
 	</build>
 
